objects/Assessment__c.object
<CustomObject>
    <description>Salesforce Industries upgrade transition assessment and report</description>
    <fields>
        <fullName>AnalysisDataJSON__c</fullName>
        <label>AnalysisDataJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApexShareAnalysisJSON__c</fullName>
        <label>ApexShareAnalysisJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apex_Sharing_Scan_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Queueable and Batchable jobs checking for Apex Share Reasons has completed</description>
        <label>Apex Sharing Scan Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bulk_Scan_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that background scanning of org dependencies and upgrade readiness on this org has completed</description>
        <label>Bulk Scan Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Question_Id__c</fullName>
        <label>Current Question Id</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Question_Number__c</fullName>
        <label>Current Question Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Representation__c</fullName>
        <label>Customer Representation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>People (B2C)</fullName>
                </value>
                <value>
                    <fullName>Businesses (B2B)</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeployedPackageJSON__c</fullName>
        <label>DeployedPackageJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DeploymentDataJSON__c</fullName>
        <label>DeploymentDataJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ErrorDeployPackagesJSON__c</fullName>
        <label>ErrorDeployPackagesJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ErrorInstallPackagesJSON__c</fullName>
        <label>ErrorInstallPackagesJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Data_In_Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Data In Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Accounts_Leveraged__c</fullName>
        <label>Financial Accounts Leveraged</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checking Account</fullName>
                </value>
                <value>
                    <fullName>Savings Account</fullName>
                </value>
                <value>
                    <fullName>Loans</fullName>
                </value>
                <value>
                    <fullName>Investment Account</fullName>
                </value>
                <value>
                    <fullName>Treasury Service</fullName>
                </value>
                <value>
                    <fullName>Not Listed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasMappingData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that mapping has been completed for this Assessment.</description>
        <inlineHelpText>If checked, indicates that mapping has been completed for this Assessment.</inlineHelpText>
        <label>Has Mapping Data?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Apex_Sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have Apex Sharing Reasons been detected?</inlineHelpText>
        <label>Has Apex Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Apex_Sharing_on_CDS_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether AccountShare or OpportunityShare reference has been found in Apex</description>
        <label>Has Apex Sharing on CDS Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Branch_Management__c</fullName>
        <label>Has Branch Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I currently track branches in Salesforce</fullName>
                </value>
                <value>
                    <fullName>I don’t currently track branches, but want to moving forward</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Relationship_Groups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Relationship Groups?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Rollups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Rollups?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstallDataJSON__c</fullName>
        <label>InstallDataJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_B2C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is B2C?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MappingDataJSON__c</fullName>
        <label>MappingDataJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PDF_Generation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes when Heroku has finished processing the PDF report version of the Assessment</description>
        <label>PDF Generation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PendingDeployPackagesJSON__c</fullName>
        <label>PendingDeployPackagesJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PendingInstallPackagesJSON__c</fullName>
        <label>PendingInstallPackagesJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Groupings__c</fullName>
        <label>Relationship Groupings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Family Households</fullName>
                </value>
                <value>
                    <fullName>Business Groups</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected_Products__c</fullName>
        <label>Selected Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FSC Banking</fullName>
                </value>
                <value>
                    <fullName>FSC Wealth</fullName>
                </value>
                <value>
                    <fullName>FSC Mortgage</fullName>
                </value>
                <value>
                    <fullName>FSC Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Mapping</fullName>
                </value>
                <value>
                    <fullName>Scanning</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiate</fullName>
                </value>
                <value>
                    <fullName>Bulk Scan</fullName>
                </value>
                <value>
                    <fullName>Apex Share Scan</fullName>
                </value>
                <value>
                    <fullName>Generating Deployment Package</fullName>
                </value>
                <value>
                    <fullName>Deployment Package Ready</fullName>
                </value>
                <value>
                    <fullName>Finalizing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upgrade_Recommendation__c</fullName>
        <label>Upgrade Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clean Upgrade Existing Org</fullName>
                </value>
                <value>
                    <fullName>Complex Upgrade Existing Org</fullName>
                </value>
                <value>
                    <fullName>Complex Upgrade New Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assessment</label>
    <language>en_US</language>
    <nameField>
        <displayFormat>Assessment #{0}</displayFormat>
        <label>Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>